# CompetenceDevelopment

./: CompetenceDevelopment.sln
MFC-Tutorial/MFCDemo/: MFCDemo.sln
MFC-Tutorial/MFCDemo/MFCDemo/: MFCDemo.cpp  MFCDemo.rc  MFCDemo.vcxproj
MFC-Tutorial/MFCDialogDemo/: MFCDialogDemo.sln
MFC-Tutorial/MFCDialogDemo/MFCDialogDemo/: Example.cpp  MFCDialogDemo.rc  MFCDialogDemo.vcxproj  MFCDialogDemo.vcxproj.filters
MFC-Tutorial/MFCWindowDemo/: MFCWindowDemo.sln
MFC-Tutorial/MFCWindowDemo/MFCWindowDemo/: Example.cpp  MFCWindowDemo.vcxproj
Python/CardCollection/: card.py  collection.py
Rust/compound_type/: Cargo.toml
Rust/compound_type/src/: array.rs  touples.rs
Rust/control_flow/: Cargo.toml
Rust/control_flow/src/: main.rs
Rust/functions/: Cargo.toml
Rust/functions/src/: main.rs
Rust/hello_cargo/: Cargo.toml
Rust/loops/: Cargo.toml
Rust/loops/src/: main.rs
Rust/ownership/: Cargo.toml
Rust/ownership/src/: main.rs
Rust/race_conditions/: Cargo.toml
Rust/race_conditions/src/: main.rs
Rust/scalar_type/: Cargo.toml
Rust/scalar_type/src/: bool.rs  float.rs  integer.rs  unicode.rs
Rust/structs/: Cargo.toml
Rust/variables/: Cargo.toml
StaticTemplate/: Image.cpp  Image.h  Image_trait.cpp  SQLGenerator.cpp  SQLGenerator.h  StaticTemplate.cpp  StaticTemplate.vcxproj  StaticTemplate.vcxproj.filters  Trait.h  User.cpp  User.h  User_trait.cpp
eLearning/: eLearning.sln
eLearning/eLearning/: ch1.cpp  ch2.cpp  eLearning.vcxproj  eLearning.vcxproj.filters
