[package]
name = "compound_type"
version = "0.1.0"
authors = ["ImreCsete <31795867+ImreCsete@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "array"
path = "src/array.rs"

[[bin]]
name = "touples"
path = "src/touples.rs"

[dependencies]
